Refactor several backend resource and service: - Constructors updated for dependency injection - Improved notification handling - Enhanced user and task management logic - Code cleanup and optimization